# beancount-categorizer

./: LICENSE  README.md  setup.cfg
beancount_categorizer/: __init__.py  categorizer.py  hooks.py
