[metadata]
name = beancount_categorizer
version = attr: setuptools_scm.get_version
description = Decorate Beancount importers with user configured entry categorization.
long_description = file: README.md
url = https://github.com/bratekarate/beancount-categorizer
author = bratekarate
keywords = fava beancount accounting
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    beancount>=2.0.0

[options.packages.find]
exclude =
    tests

# [tool:pytest]
# filterwarnings =
#     ignore:.*PY_SSIZE_T_CLEAN will be required.*
